clang/test/BSC/Negative/SafeZone/spatial_check_static_mode/spatial_check_static_mode.cbs
// RUN: %clang_cc1 -verify -spatial-check=static %s

void test1(int *_Borrow p1, int **_Borrow p2, int *_Borrow *p3,
           int *_Owned q1, int **_Owned q2, int *_Owned *q3, int *_Owned *_Owned q4, int *_Owned *_Borrow q5) {
  p1[1] = 2; // expected-error {{subscript of _Borrow pointer is not allowed}}
  p2[1] = nullptr; // expected-error {{subscript of _Borrow pointer is not allowed}}
  p2[1][2] = 0; // expected-error {{subscript of _Borrow pointer is not allowed}}
  p3[1] = nullptr;
  p3[1][2] = 2; // expected-error {{subscript of _Borrow pointer is not allowed}}

  q1[2] = 3; // expected-error {{_Owned pointer type ('int *_Owned') do not support ArraySubscript operate}}
  q2[2] = nullptr; // expected-error {{_Owned pointer type ('int **_Owned') do not support ArraySubscript operate}}
  q2[1][3] = 2; // expected-error {{_Owned pointer type ('int **_Owned') do not support ArraySubscript operate}}
  q3[1] = nullptr;
  q3[1][2] = 3; // expected-error {{_Owned pointer type ('int *_Owned') do not support ArraySubscript operate}}
  q4[2] = nullptr; // expected-error {{_Owned pointer type ('int *_Owned *_Owned') do not support ArraySubscript operate}}
  q4[2][2] = 1; // expected-error {{_Owned pointer type ('int *_Owned *_Owned') do not support ArraySubscript operate}}
  q5[2] = nullptr; // expected-error {{subscript of _Borrow pointer is not allowed}}
  q5[2][3] = 2; // expected-error {{subscript of _Borrow pointer is not allowed}}
}
